Tooltip alignment fixes

--- a/gitb-ui/app/assets/stylesheets/less/app.less
+++ b/gitb-ui/app/assets/stylesheets/less/app.less
@@ -237,11 +237,14 @@ tr.expandable-table-row-expanded table.expandable-table {
 .inline-tooltip {
     display: inline-block;
 	margin-left: 10px;
-    min-height: 34px;
-    padding-top: 5px;
-    padding-bottom: 7px;
-	margin-bottom: 0;	
-	span {
-		vertical-align: text-bottom;
+	div.check {
+		span {
+			vertical-align: text-bottom;
+		}
+	}
+	div.radio {
+		span {
+			vertical-align: sub;
+		}
 	}
 }
